# Graphrag-copilot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  package.json  pyproject.toml  release-please-config.json  start.sh  test_api.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci-docs.yml  ci-frontend.yml  ci-python.yml  ci.yml
ai-video-showcase/: README.md  render_showcase_video.py  requirements-video.txt  video_tools_catalog.json
apps/api/: README.md  pyproject.toml
apps/api/src/graphrag_api/: __init__.py  app.py  config.py  main.py
apps/api/src/graphrag_api/mcp/: __init__.py  server.py  tools.py
apps/api/src/graphrag_api/trace/: __init__.py  retrieval_trace.py
apps/api/tests/: __init__.py  test_health.py  test_mcp.py  test_trace.py
apps/web/: README.md  biome.json  package.json
apps/web/app/flow/: page.tsx
apps/web/components/flow/: AgentFlow.tsx  AuditDrawer.tsx  nodes.ts
apps/web/lib/: api.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/src/app/flow/: page.tsx
apps/web/src/components/flow/: AgentFlow.tsx  AuditDrawer.tsx  nodes.ts
apps/web/src/lib/: api.ts
apps/web/styles/: flow.css
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/agents/: orchestrator.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: constants.py  logger.py  security.py
backend/app/services/: bm25_store.py  document_parser.py  evidence_fusion.py  kg_service.py  llm_service.py  vector_store.py
backend/app/utils/: json_utils.py
backend/config/: settings.py
backend/tests/: conftest.py  test_bm25_persistence.py  test_bm25_store.py  test_evidence_fusion.py  test_fallback.py  test_kg_batch.py  test_llm_service.py  test_orchestrator.py  test_orchestrator_trace.py  test_routes.py  test_security.py  test_vector_store.py  test_vector_store_lock.py
demo_docs/: company_ai_strategy.md  product_architecture.md  risk_review.md
docs/: README.md
docs/adr/: 0001-from-v1-to-v3.1.md  0002-monorepo-container.md
docs/architecture/: migration-roadmap.md  release-process.md  v3.1-final-spec.md  v3.2-provenance.md  w2-langgraph-graph.md
docs/ci-templates/: README.md  ci-frontend.yml  ci-python.yml
eval/: questions.json  run_eval.py
eval/results/: v3.2-provenance-baseline.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/graph/: ControlPanel.tsx  page.tsx  types.ts
frontend/src/app/status/: page.tsx
frontend/src/app/upload/: page.tsx
infra/docker/: .env.example  README.md  docker-compose.dev.yml
infra/workflows-template/: README.md  ci-docs.yml.tmpl  ci-frontend.yml.tmpl  ci-python.yml.tmpl  release-please.yml.tmpl
scripts/: install-workflows.sh
