[project]
name = "graphrag-api"
version = "0.1.0"
description = "FastAPI + MCP server for GraphRAG Copilot v3.1."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lee fanwei" }]
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mcp>=1.0",
    "httpx>=0.27",
    "graphrag-schemas",
    "graphrag-graph",
    "graphrag-retrieval",
    "graphrag-observability",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "pyright>=1.1.380",
]

[tool.uv.sources]
graphrag-schemas = { workspace = true }
graphrag-graph = { workspace = true }
graphrag-retrieval = { workspace = true }
graphrag-observability = { workspace = true }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
